@@ -76,7 +76,8 @@ __cxa_thread_atexit_impl (dtor_func func, void *obj, void *dso_symbol)
 }
 
 /* Call the destructors.  This is called either when a thread returns from the
-   initial function or when the process exits via the exit(3) function.  */
+   initial function or when the process exits via the exit function.  */
+attribute_hidden
 void
 __call_tls_dtors (void)
 {
@@ -99,4 +100,3 @@ __call_tls_dtors (void)
       free (cur);
     }
 }
-libc_hidden_def (__call_tls_dtors)
